--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     implementation 'androidx.core:core-ktx:1.6.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
 
 
